--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,6 +3,7 @@ name: CI for KernelCI Dashboard
 on:
   push:
     branches: [main]
+    tags: [release/**]
   pull_request:
     types:
       - opened
