--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,4 +25,4 @@ jobs:
     steps:
       - name: Deploy to staging
         run: |
-          echo {{ github.tags }}
+          echo ${{ github.tags }}
