--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,7 +20,7 @@ env:
 
 jobs:
   deploy-staging:
-    if: github.event_name == 'push' # && github.tags == 'release/**'
+    if: github.event_name == 'push' && ${{ startsWith(github.ref, 'refs/tags/release/') }}
     runs-on: ubuntu-latest
     steps:
       - env:
