--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,12 +20,12 @@ env:
 
 jobs:
   deploy-staging:
-    if: github.event_name == 'push' && ${{ startsWith(github.ref, 'refs/tags/release/') }}
+    if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/release/') }}
     runs-on: ubuntu-latest
     steps:
       - env:
           EVENT_CONTEXT: ${{ toJSON(github.event) }}
           REF: ${{ github.ref }}
-          COND: ${{ startsWith(github.ref, 'refs/tags/release/') }}
+          COND: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/release/') }}
         run: |
           echo "$REF | $COND | $EVENT_CONTEXT"
